Renamed Legend samples

--- a/samples/ChartJs.Blazor.Sample/Pages/Legend/DotNet-Instance-Handlers.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/Legend/DotNet-Instance-Handlers.cshtml
@@ -1,6 +1,5 @@
-﻿@page "/Legend/DotNetStaticOnClick"
+﻿@page "/Legend/DotNetInstanceHandlers"
 @using ChartJs.Blazor.ChartJS.BarChart.Dataset
-@using ChartJs.Blazor.ChartJS.Common
 @using ChartJs.Blazor.ChartJS.Common.Legends
 @using ChartJs.Blazor.ChartJS.Common.Legends.OnClickHandler
 @using ChartJs.Blazor.ChartJS.Common.Legends.OnHover
@@ -8,6 +7,7 @@
 @using ChartJs.Blazor.Sample.Shared.Components
 @using Microsoft.JSInterop
 @using Newtonsoft.Json
+@using Newtonsoft.Json.Linq
 
 <h2>Simple Bar Chart</h2>
 <div class="row">
@@ -21,6 +21,9 @@
 <DataSetDisplay ref="_dataSetDisplay" bind-DataSetsStr="@DataSetsStr" Width="600" Height="300"/>
 
 @functions {
+
+    [Inject]
+    protected Sotsera.Blazor.Toaster.IToaster Toaster { get; set; }
 
     private BarChartConfig barChartConfig { get; set; }
     private ChartJsBarChart barChart { get; set; }
@@ -50,8 +53,8 @@
                 Responsive = true,
                 Legend = new Legend
                 {
-                    OnClick = new DotNetStaticClickHandler(StaticClickHandler),
-                    OnHover = new DotNetStaticHoverHandler(LegendItemOnHoverHandler)
+                    OnClick = new DotNetInstanceClickHandler(InstanceClickHandler),
+                    OnHover = new DotNetInstanceHoverHandler(LegendItemInstanceOnHoverHandler)
                 }
             },
             Data = new BarChartData
@@ -93,17 +96,41 @@
     }
 
     [JSInvokable]
-    public static void LegendItemOnHoverHandler(object sender, object mousemove)
+    public void LegendItemInstanceOnHoverHandler(object sender, object mousemove)
     {
-        Console.WriteLine(JsonConvert.SerializeObject(sender));
-        Console.WriteLine(JsonConvert.SerializeObject(mousemove, Formatting.Indented));
+        var argsJObj = JObject.FromObject(mousemove);
+
+        var clickedDatasetIndex = (int) argsJObj["datasetIndex"];
+        var hoveredItemDatasetName = barChartConfig.Data.Datasets[clickedDatasetIndex].Label;
+
+        Toaster.Info(
+            $"'{hoveredItemDatasetName}'",
+            "Mouse over item",
+            options =>
+            {
+                options.VisibleStateDuration = 700;
+                options.ShowTransitionDuration = 100;
+                options.HideTransitionDuration = 100;
+            });
     }
 
     [JSInvokable]
-    public static void StaticClickHandler(object sender, object args)
+    public void InstanceClickHandler(object sender, object args)
     {
-        Console.WriteLine(JsonConvert.SerializeObject(sender));
-        Console.WriteLine(JsonConvert.SerializeObject(args, Formatting.Indented));
+        var argsJObj = JObject.FromObject(args);
+
+        var clickedDatasetIndex = (int) argsJObj["datasetIndex"];
+        var clickedDatasetName = barChartConfig.Data.Datasets[clickedDatasetIndex].Label;
+
+        Toaster.Info(
+            $"'{clickedDatasetName}'",
+            "Dataset clicked",
+            options =>
+            {
+                options.VisibleStateDuration = 700;
+                options.ShowTransitionDuration = 100;
+                options.HideTransitionDuration = 100;
+            });
     }
 
     protected override void OnAfterRender()
