--- a/samples/ChartJs.Blazor.Sample/Shared/NavMenu.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Shared/NavMenu.cshtml
@@ -59,17 +59,18 @@
             <ul class="nav flex-column">
 
                 <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="/Legend/JsOnClick">
-                        <span class="oi oi-bar-chart" aria-hidden="true"></span> JS OnClick
+                    <NavLink class="nav-link" href="/Legend/JsHandlers">
+                        <span class="oi oi-bar-chart" aria-hidden="true"></span> JS Handlers
                     </NavLink>
                 </li>
                 <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="/Legend/DotNetStaticOnClick">
-                        <span class="oi oi-bar-chart" aria-hidden="true"></span> .Net Static OnClick
+                    <NavLink class="nav-link" href="/Legend/DotNetStaticHandlers">
+                        <span class="oi oi-bar-chart" aria-hidden="true"></span> .Net Static Handlers
                     </NavLink>
-                </li>                <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="/Legend/DotNetInstanceOnClick">
-                        <span class="oi oi-bar-chart" aria-hidden="true"></span> .Net Instance OnClick
+                </li>
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="/Legend/DotNetInstanceHandlers">
+                        <span class="oi oi-bar-chart" aria-hidden="true"></span> .Net Instance Handlers
                     </NavLink>
                 </li>
 
