Added a simple landing page

--- a/samples/ChartJs.Blazor.Sample/Shared/MainLayout.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Shared/MainLayout.cshtml
@@ -1,6 +1,6 @@
 ﻿@inherits BlazorLayoutComponent
 
-<div class="sidebar" style="width: auto">
+<div class="sidebar" style="width: auto; margin: 5px">
     <NavMenu />
 </div>
 
