--- a/samples/ChartJs.Blazor.Sample/Pages/Index.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/Index.cshtml
@@ -1,93 +1,68 @@
 ﻿@page "/"
-@using ChartJs.Blazor.ChartJS.BarChart.Dataset
-@using ChartJs.Blazor.ChartJS.Common
-@using ChartJs.Blazor.Util.Color
-@using ChartJs.Blazor.Sample.Shared.Components
-@using Newtonsoft.Json
+
+<style>
+    .bg-1 {
+        background-color: #1abc9c; /* Green */
+        color: #ffffff;
+    }
+</style>
 
 
-<h2>Simple Bar Chart</h2>
-<div class="row">
-    <button class="btn btn-primary" onclick="@UpdateChart">Update Chart </button>
+<div class="container-fluid bg-1 text-center">
+    <h2>
+        Welcome to the ChatJs.Blazor samples page.
+    </h2>
 </div>
-<ChartJsBarChart ref="barChart"
-                 Config="@barChartConfig"
-                 Width="600"
-                 Height="300"/>
 
-<DataSetDisplay ref="_dataSetDisplay" bind-DataSetsStr="@DataSetsStr" Width="600" Height="300"/>
+<div class="container-fluid bg-1 text-left">
 
-@functions {
+    <p>
+        <br/>Use the navbar on the left (or the hamburger menu if you're on mobile) to switch between the samples.
+        <br/>
+        <br/>Each sample page has a textarea beneath the chart itself. Change the data there and watch how the chart changes.
+        <br/> You can always undo your change with CTRL+Z (or CMD+Z if you're on a MAC). Whenever you want to revert to the original chart setting just click "I messed up"
+        <br/> Keep in mind that a lot of JSON serialization is happening when you update the textarea so the performance you experience will not be representative.
+    </p>
+    <h3></h3>
 
-    private BarChartConfig barChartConfig { get; set; }
-    private ChartJsBarChart barChart { get; set; }
+</div>
 
-    DataSetDisplay _dataSetDisplay;
+<div class="container-fluid bg-2 text-center">
+    <h3>Where are the goodies?</h3>
+</div>
+<div class="container-fluid bg-2 text-center">
+    <p>
+        Nuget Package:
+        <a style="color: #00cc00"
+           href="https://www.nuget.org/packages/ChartJs.Blazor"
+           target="_blank">
+            https://www.nuget.org/packages/ChartJs.Blazor
+        </a>
+    </p>
 
-    string DataSetsStr
-    {
-        get => JsonConvert.SerializeObject(barChartConfig.Data.Datasets, Formatting.Indented);
-        set
-        {
-            barChartConfig.Data.Datasets = JsonConvert.DeserializeObject<List<BaseBarChartDataset>>(value);
-            Console.WriteLine(JsonConvert.SerializeObject(barChartConfig.Data.Datasets));
-        }
-    }
+    <p>
+        Source code:
+        <a style="color: #00cc00"
+           href="https://github.com/mariusmuntean/ChartJs.Blazor"
+           target="_blank">
+            https://github.com/mariusmuntean/ChartJs.Blazor
+        </a>
+    </p>
+</div>
 
-    protected override void OnInit()
-    {
-        barChartConfig = barChartConfig ?? new BarChartConfig
-        {
-            CanvasId = "myBarChartCanvas",
-            Options = new BarChartOptions
-            {
-                Text = "Sample chart from Blazor",
-                Display = true,
-                Responsive = true
-            },
-            Data = new BarChartData
-            {
-                Labels = new List<string> {"Red", "Blue", "Yellow", "Green", "Purple", "Orange"},
-                Datasets = new List<BaseBarChartDataset>
-                {
-                    new BarChartDataset
-                    {
-                        Label = "1'st dataset",
-                        BackgroundColor = ColorUtil.RandomColorString(),
-                        BorderColor = ColorUtil.RandomColorString(),
-                        Data = new List<dynamic> {19, 12, 5, 3, 3, 2}
-                    },
-                    new BarChartDataset
-                    {
-                        Label = "2'nd dataset",
-                        BackgroundColor = ColorUtil.RandomColorString(),
-                        BorderColor = ColorUtil.RandomColorString(),
-                        Data = new List<dynamic> {30, 10, 15, 13, 13, 12}
-                    }
-                }
-            }
-        };
-    }
+<div class="container-fluid bg-3 text-center">
+    <h3>Where To Find Me?</h3>
+    <p>
+        GitHub:
+        <a href="https://github.com/mariusmuntean"
+           target="_blank">
+            https://github.com/mariusmuntean
+        </a>
+    </p>
+    <p>
+        Twitter: <a href="https://twitter.com/MunteanMarius" target="_blank">@@MunteanMarius</a>
+    </p>
+</div>
 
-    protected override void OnAfterRender()
-    {
-        Console.WriteLine("OnAfterRender - bar");
-        barChart.Reload();
-
-        _dataSetDisplay.OnUpdatedDataSetsStr += (dataSetsStr) =>
-        {
-            barChartConfig.Data.Datasets = JsonConvert.DeserializeObject<List<BaseBarChartDataset>>(dataSetsStr);
-            barChart.Reload();
-        };
-    }
-
-    private void UpdateChart()
-    {
-    //Update existing dataset
-        barChartConfig.Data.Labels.Add($"{DateTime.Now.Second}");
-        barChartConfig.Data.Datasets.ForEach(dataset => { dataset.Data.Add(DateTime.Now.Second); });
-
-        barChart.Reload();
-    }
-
+@functions{
 }
