--- a/samples/ChartJs.Blazor.Sample/Shared/NavMenu.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Shared/NavMenu.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="top-row pl-4 navbar navbar-dark">
+﻿<div class="top-row pl-3 navbar navbar-dark">
     <a class="navbar-brand" href="/">ChartJS.Blazor</a>
     <button class="navbar-toggler" onclick=@ToggleNavMenu>
         <span class="navbar-toggler-icon"></span>
@@ -6,114 +6,103 @@
 </div>
 
 <div class=@(collapseNavMenu ? "collapse" : null) onclick=@ToggleNavMenu>
-    <ul class="nav flex-column">
-        <li class="nav-item px-3">
+    <div class="top-row pl-2">
+        <NavLink class="nav-link" href="/" Match=NavLinkMatch.All>
+            <span class="oi oi-bar-chart" aria-hidden="true"></span> Welcome
+        </NavLink>
+    </div>
+
+    <div class="list-group flex-column">
+
+        <a class="nav-item px-2">
             <NavLink class="nav-link" href="/RadarChart">
                 <span class="oi oi-bar-chart" aria-hidden="true"></span> Radar Chart
             </NavLink>
-        </li>
+        </a>
 
-        <li class="nav-item px-3">
-            <div class="px-4" style="color: azure; margin-top: 20px">Line Charts</div>
-            <ul class="nav flex-column">
+        <a class="nav-item px-2">
+            <NavLink class="nav-link" href="/linechart">
+                <span class="oi oi-bar-chart" aria-hidden="true"></span> Line Chart
+            </NavLink>
+        </a>
 
-                <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="/linechart">
-                        <span class="oi oi-bar-chart" aria-hidden="true"></span> Line Chart
-                    </NavLink>
-                </li>
-                <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="/filllinechart">
-                        <span class="oi oi-bar-chart" aria-hidden="true"></span> Fill Line Chart
-                    </NavLink>
-                </li>
-            </ul>
-        </li>
+        <a class="nav-item px-2">
+            <NavLink class="nav-link" href="/filllinechart">
+                <span class="oi oi-bar-chart" aria-hidden="true"></span> Fill Line Chart
+            </NavLink>
+        </a>
 
-        <li class="nav-item px-3">
-            <div class="px-4" style="color: azure; margin-top: 20px">Bar Charts</div>
-            <ul class="nav flex-column">
+        <a class="nav-item px-2">
+            <NavLink class="nav-link" href="/SimpleBarChart">
+                <span class="oi oi-bar-chart" aria-hidden="true"></span> Simple Bar Chart
+            </NavLink>
+        </a>
+        <a class="nav-item px-2">
+            <NavLink class="nav-link" href="/StackedBarChart">
+                <span class="oi oi-bar-chart" aria-hidden="true"></span> Stacked Bar Chart
+            </NavLink>
+        </a>
+        <a class="nav-item px-2">
+            <NavLink class="nav-link" href="/HorizontalBarChart">
+                <span class="oi oi-bar-chart" aria-hidden="true"></span> Horizontal Bar Chart
+            </NavLink>
+        </a>
 
-                <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="/" Match=NavLinkMatch.All>
-                        <span class="oi oi-bar-chart" aria-hidden="true"></span> Simple Bar Chart
-                    </NavLink>
-                </li>
-                <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="/StackedBarChart">
-                        <span class="oi oi-bar-chart" aria-hidden="true"></span> Stacked Bar Chart
-                    </NavLink>
-                </li>
-                <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="/HorizontalBarChart">
-                        <span class="oi oi-bar-chart" aria-hidden="true"></span> Horizontal Bar Chart
-                    </NavLink>
-                </li>
+        <a class="nav-item px-2">
+            <NavLink class="nav-link" href="/Legend/JsHandlers">
+                <span class="oi oi-bar-chart" aria-hidden="true"></span> JS Handlers
+            </NavLink>
+        </a>
+        <a class="nav-item px-2">
+            <NavLink class="nav-link" href="/Legend/DotNetStaticHandlers">
+                <span class="oi oi-bar-chart" aria-hidden="true"></span> .Net Static Handlers
+            </NavLink>
+        </a>
+        <a class="nav-item px-2">
+            <NavLink class="nav-link" href="/Legend/DotNetInstanceHandlers">
+                <span class="oi oi-bar-chart" aria-hidden="true"></span> .Net Instance Handlers
+            </NavLink>
+        </a>
 
-            </ul>
-
-        </li>
-
-        <li class="nav-item px-3">
-            <div class="px-4" style="color: azure; margin-top: 20px">Legend</div>
-            <ul class="nav flex-column">
-
-                <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="/Legend/JsHandlers">
-                        <span class="oi oi-bar-chart" aria-hidden="true"></span> JS Handlers
-                    </NavLink>
-                </li>
-                <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="/Legend/DotNetStaticHandlers">
-                        <span class="oi oi-bar-chart" aria-hidden="true"></span> .Net Static Handlers
-                    </NavLink>
-                </li>
-                <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="/Legend/DotNetInstanceHandlers">
-                        <span class="oi oi-bar-chart" aria-hidden="true"></span> .Net Instance Handlers
-                    </NavLink>
-                </li>
-
-            </ul>
-        </li>
-        <li class="nav-item px-3">
+        <a class="nav-item px-2">
             <NavLink class="nav-link" href="/bubblechart">
                 <span class="oi oi-bar-chart" aria-hidden="true"></span> Bubble Chart
             </NavLink>
-        </li>
-        <li class="nav-item px-3">
+        </a>
+        <a class="nav-item px-2">
             <NavLink class="nav-link" href="/PolarAreaChart">
                 <span class="oi oi-bar-chart" aria-hidden="true"></span> Polar Area Chart
             </NavLink>
-        </li>
-        <li class="nav-item px-3">
+        </a>
+        <a class="nav-item px-2">
             <NavLink class="nav-link" href="/mixedchart">
                 <span class="oi oi-bar-chart" aria-hidden="true"></span> Mixed Chart
             </NavLink>
-        </li>
-        <li class="nav-item px-3">
+        </a>
+        <a class="nav-item px-2">
             <NavLink class="nav-link" href="/piechart">
                 <span class="oi oi-bar-chart" aria-hidden="true"></span> Pie Chart
             </NavLink>
-        </li>
-        <li class="nav-item px-3">
+        </a>
+        <a class="nav-item px-2">
             <NavLink class="nav-link" href="/doughnutchart">
                 <span class="oi oi-bar-chart" aria-hidden="true"></span> Doughnut Chart
             </NavLink>
-        </li>
+        </a>
 
-        <li class="nav-item px-3">
+        <a class="nav-item px-2">
             <NavLink class="nav-link" href="/scatterchart">
                 <span class="oi oi-bar-chart" aria-hidden="true"></span> Scatter Chart
             </NavLink>
-        </li>
-    </ul>
-</div>
+        </a>
+    </div>
 
-<div class="top-row pl-4 navbar navbar-dark">
-    <NavLink class="nav-link" href="/about">
-        <span class="oi oi-bar-chart" aria-hidden="true"></span> About
-    </NavLink>
+    <div class="top-row pl-4 navbar navbar-dark">
+        <NavLink class="nav-link" href="/about">
+            <span class="oi oi-bar-chart" aria-hidden="true"></span> About
+        </NavLink>
+    </div>
+
 </div>
 
 @functions {
