Aded bette title to the Legen item samples

--- a/samples/ChartJs.Blazor.Sample/Pages/Legend/DotNet-Instance-Handlers.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/Legend/DotNet-Instance-Handlers.cshtml
@@ -9,7 +9,7 @@
 @using Newtonsoft.Json
 @using Newtonsoft.Json.Linq
 
-<h2>Simple Bar Chart</h2>
+<h2>Legend Item - .Net instance click/hover handler</h2>
 <div class="row">
     <button class="btn btn-primary" onclick="@UpdateChart">Update Chart </button>
 </div>
