--- a/samples/ChartJs.Blazor.Sample/Pages/Legend/DotNet-Static-Handlers.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/Legend/DotNet-Static-Handlers.cshtml
@@ -8,7 +8,7 @@
 @using Microsoft.JSInterop
 @using Newtonsoft.Json
 
-<h2>Simple Bar Chart</h2>
+<h2>Legend Item - .Net static click/hover handler (open the developer console)</h2>
 <div class="row">
     <button class="btn btn-primary" onclick="@UpdateChart">Update Chart </button>
 </div>
