--- a/samples/ChartJs.Blazor.Sample/Pages/Legend/Js-Handlers.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/Legend/Js-Handlers.cshtml
@@ -6,7 +6,7 @@
 @using ChartJs.Blazor.Sample.Shared.Components
 @using Newtonsoft.Json
 
-<h2>Simple Bar Chart</h2>
+<h2>Legend Item - Javascript click handler</h2>
 <div class="row">
     <button class="btn btn-primary" onclick="@UpdateChart">Update Chart </button>
 </div>
