--- a/src/ChartJs.Blazor/Charts/ChartJsPolarAreaChart.cshtml
+++ b/src/ChartJs.Blazor/Charts/ChartJsPolarAreaChart.cshtml
@@ -1,41 +1,8 @@
-﻿@using ChartJs.Blazor.ChartJS
-@using ChartJs.Blazor.ChartJS.PolarAreaChart
+﻿@using ChartJs.Blazor.ChartJS.PolarAreaChart
+@inherits ChartBase<PolarAreaChartConfig>
 
 <div class="row">
     <div class="container">
         <canvas id="@Config.CanvasId" width="@Width" height="@Height"></canvas>
     </div>
 </div>
-
-@functions {
-
-    [Parameter]
-    PolarAreaChartConfig Config { get; set; }
-
-    [Parameter]
-    int Width { get; set; } = 400;
-
-    [Parameter]
-    int Height { get; set; } = 400;
-
-    protected override void OnAfterRender()
-    {
-        ChartJsInterop.InitializePolarAreaChart(Config);
-    }
-
-    void DisplayChart()
-    {
-        ChartJsInterop.InitializePolarAreaChart(Config);
-    }
-
-    public void Update()
-    {
-        ChartJsInterop.UpdatePolarAreaChart(Config);
-    }
-    
-    public void Reload()
-    {
-        ChartJsInterop.ReloadPolarAreaChart(Config);
-    }
-
-}
