--- a/samples/ChartJs.Blazor.Sample/_ViewImports.cshtml
+++ b/samples/ChartJs.Blazor.Sample/_ViewImports.cshtml
@@ -1,8 +1,7 @@
 ﻿@using System.Net.Http
-@using Microsoft.AspNetCore.Blazor
-@using Microsoft.AspNetCore.Blazor.Components
-@using Microsoft.AspNetCore.Blazor.Layouts
-@using Microsoft.AspNetCore.Blazor.Routing
+@using Microsoft.AspNetCore.Components
+@using Microsoft.AspNetCore.Components.Layouts
+@using Microsoft.AspNetCore.Components.Routing
 @using ChartJs.Blazor
 @using ChartJs.Blazor.Charts
 @using ChartJs.Blazor.ChartJS
