--- a/samples/ChartJs.Blazor.Sample/Shared/MainLayout.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Shared/MainLayout.cshtml
@@ -1,4 +1,4 @@
-﻿@inherits BlazorLayoutComponent
+﻿@inherits LayoutComponentBase
 
 <div class="sidebar" style="width: auto; margin: 5px">
     <NavMenu />
