--- a/samples/ServerSide/ChartJs.Blazor.Sample.Serverside/Components/_ViewImports.cshtml
+++ b/samples/ServerSide/ChartJs.Blazor.Sample.Serverside/Components/_ViewImports.cshtml
@@ -5,4 +5,9 @@
 @using Microsoft.JSInterop
 @using ChartJs.Blazor.Sample.Serverside.Components.Shared
 @using ChartJs.Blazor.Charts
+@using ChartJs.Blazor.ChartJS.Common
+@using ChartJs.Blazor.ChartJS.Common.Legends
+@using ChartJs.Blazor.Util.Color
+@addTagHelper *,ChartJs.Blazor.Sample.Shared
 @addTagHelper *,ChartJs.Blazor
+@addTagHelper *, Sotsera.Blazor.Toaster
