--- a/samples/ChartJs.Blazor.Sample/Pages/LineChart/LineChart.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/LineChart/LineChart.cshtml
@@ -2,7 +2,6 @@
 @using ChartJs.Blazor.ChartJS.Common
 @using ChartJs.Blazor.ChartJS.Common.Legends
 @using ChartJs.Blazor.ChartJS.LineChart
-@using ChartJs.Blazor.Sample.Shared.Components
 @using Newtonsoft.Json
 
 <h2>Line Chart</h2>
@@ -11,23 +10,27 @@
 </div>
 <ChartJsLineChart ref="lineChartJs" Config="@lineChartConfig" Width="600" Height="300"/>
 
-<DataSetDisplay ref="_dataSetDisplay" bind-DataSetsStr="@DataSetsStr" Width="600" Height="300"/>
+<DataDisplay OnUpdatedDataStr="@OnDataStrChange" bind-DataStr="@DataStr" Width="600" Height="300"/>
 
 @functions{
 
     public LineChartConfig lineChartConfig { get; set; }
     ChartJsLineChart lineChartJs;
 
-    DataSetDisplay _dataSetDisplay;
-
-    string DataSetsStr
+    string DataStr
     {
-        get => JsonConvert.SerializeObject(lineChartConfig.Data.Datasets, Formatting.Indented);
+        get => JsonConvert.SerializeObject(lineChartConfig.Data, Formatting.Indented);
         set
         {
-            lineChartConfig.Data.Datasets = JsonConvert.DeserializeObject<List<LineChartDataset>>(value);
-            Console.WriteLine(JsonConvert.SerializeObject(lineChartConfig.Data.Datasets));
+            lineChartConfig.Data = JsonConvert.DeserializeObject<LineChartData>(value);
+            Console.WriteLine(JsonConvert.SerializeObject(lineChartConfig.Data));
         }
+    }
+                                
+    void OnDataStrChange(string dataStr)
+    {
+        lineChartConfig.Data = JsonConvert.DeserializeObject<LineChartData>(dataStr);
+        lineChartJs.Update();
     }
 
     protected override void OnInit()
@@ -104,19 +107,9 @@
         };
     }
 
-    protected override void OnAfterRender()
-    {
-        Console.WriteLine("OnAfterRender");
-
-        _dataSetDisplay.OnUpdatedDataSetsStr += (dataSetsStr) =>
-        {
-            lineChartConfig.Data.Datasets = JsonConvert.DeserializeObject<List<LineChartDataset>>(dataSetsStr);
-        };
-    }
-
     public void UpdateChart()
     {
-    //Update existing dataset
+        //Update existing dataset
         var rand = new Random();
         lineChartConfig.Data.Labels.Add($"New{DateTime.Now.Second}");
 
@@ -125,37 +118,5 @@
             var next = rand.Next(dataset.Data.Select(Convert.ToInt32).Max());
             dataset.Data.Add(next);
         });
-
-        lineChartJs.Update();
     }
-
-    protected override Task OnInitAsync()
-    {
-        Console.WriteLine("OnInitAsync");
-        return Task.CompletedTask;
-    }
-
-    protected override void OnParametersSet()
-    {
-        Console.WriteLine("OnParameterSet");
-    }
-
-    protected override Task OnParametersSetAsync()
-    {
-        Console.WriteLine("OnParameterSetAsync");
-        return Task.CompletedTask;
-    }
-
-    protected override bool ShouldRender()
-    {
-        Console.WriteLine("ShouldRender");
-        return true;
-    }
-
-    protected override Task OnAfterRenderAsync()
-    {
-        Console.WriteLine("OnAfterRenderAsync");
-        return Task.CompletedTask;
-    }
-
 }
