--- a/samples/ChartJs.Blazor.Sample/_ViewImports.cshtml
+++ b/samples/ChartJs.Blazor.Sample/_ViewImports.cshtml
@@ -5,8 +5,10 @@
 @using ChartJs.Blazor
 @using ChartJs.Blazor.Charts
 @using ChartJs.Blazor.ChartJS
-@using ChartJs.Blazor.ChartJS.BarChart
+@using ChartJs.Blazor.Util.Color
 @using ChartJs.Blazor.Sample
 @using ChartJs.Blazor.Sample.Shared
+@using ChartJs.Blazor.Sample.Shared.Components
 @addTagHelper *,ChartJs.Blazor
+@addTagHelper *,ChartJs.Blazor.Sample.Shared
 @addTagHelper *, Sotsera.Blazor.Toaster
