--- a/samples/ServerSide/ChartJs.Blazor.Sample.Serverside/Components/Pages/LineCharts/LineChart.cshtml
+++ b/samples/ServerSide/ChartJs.Blazor.Sample.Serverside/Components/Pages/LineCharts/LineChart.cshtml
@@ -1,62 +1,39 @@
-@page "/fetchdata"
-@using ChartJs.Blazor.Sample.Serverside.Services
-@using ChartJs.Blazor.ChartJS.Common
-@using ChartJs.Blazor.ChartJS.Common.Legends
+﻿@page "/LineChart"
 @using ChartJs.Blazor.ChartJS.LineChart
-
-@inject WeatherForecastService ForecastService
-
-<h1>Weather forecast</h1>
-
-<p>This component demonstrates fetching data from a service.</p>
-
-@if (forecasts == null)
-{
-    <p><em>Loading...</em></p>
-}
-else
-{
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>Temp. (C)</th>
-                <th>Temp. (F)</th>
-                <th>Summary</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var forecast in forecasts)
-            {
-                <tr>
-                    <td>@forecast.Date.ToShortDateString()</td>
-                    <td>@forecast.TemperatureC</td>
-                    <td>@forecast.TemperatureF</td>
-                    <td>@forecast.Summary</td>
-                </tr>
-            }
-        </tbody>
-    </table>
-}
+@using ChartJs.Blazor.ChartJS.Common.Legends
+@using Newtonsoft.Json
 
 <h2>Line Chart</h2>
 <div class="row">
     <button class="btn btn-primary" onclick="@UpdateChart">Update Chart </button>
 </div>
-<ChartJsLineChart ref="lineChartJs" Config="@lineChartConfig" Width="600" Height="300" />
+<ChartJsLineChart ref="lineChartJs" Config="@lineChartConfig" Width="600" Height="300"/>
 
+<DataDisplay OnUpdatedDataStr="@OnDataStrChange" bind-DataStr="@DataStr" Width="600" Height="300"/>
 
-@functions {
-    WeatherForecast[] forecasts;
+@functions{
 
     public LineChartConfig lineChartConfig { get; set; }
     ChartJsLineChart lineChartJs;
 
+    string DataStr
+    {
+        get => JsonConvert.SerializeObject(lineChartConfig.Data, Formatting.Indented);
+        set
+        {
+            lineChartConfig.Data = JsonConvert.DeserializeObject<LineChartData>(value);
+            Console.WriteLine(JsonConvert.SerializeObject(lineChartConfig.Data));
+        }
+    }
+                                
+    void OnDataStrChange(string dataStr)
+    {
+        lineChartConfig.Data = JsonConvert.DeserializeObject<LineChartData>(dataStr);
+        lineChartJs.Update();
+    }
 
     protected override void OnInit()
     {
-        forecasts = ForecastService.GetForecast(DateTime.Now);
-
         lineChartConfig = lineChartConfig ?? new LineChartConfig
         {
             CanvasId = "myFirstLineChart",
@@ -65,7 +42,7 @@ else
                 Text = "Sample chart from Blazor",
                 Display = true,
                 Responsive = true,
-                Title = new OptionsTitle { Display = true, Text = "Line Chart" },
+                Title = new OptionsTitle {Display = true, Text = "Line Chart"},
                 Legend = new Legend
                 {
                     Position = LegendPosition.BOTTOM.ToString(),
@@ -82,7 +59,7 @@ else
                 Scales = new Scales
                 {
                     xAxes = new List<Axis>
-            {
+                    {
                         new Axis
                         {
                             ScaleLabel = new ScaleLabel
@@ -92,7 +69,7 @@ else
                         }
                     },
                     yAxes = new List<Axis>
-            {
+                    {
                         new Axis
                         {
                             ScaleLabel = new ScaleLabel
@@ -110,9 +87,9 @@ else
             },
             Data = new LineChartData
             {
-                Labels = new List<string> { "Red", "Blue", "Yellow", "Green", "Purple", "Orange" },
+                Labels = new List<string> {"Red", "Blue", "Yellow", "Green", "Purple", "Orange"},
                 Datasets = new List<LineChartDataset>
-        {
+                {
                     new LineChartDataset
                     {
                         BackgroundColor = "#ff6384",
@@ -129,50 +106,16 @@ else
         };
     }
 
-    protected override void OnAfterRender()
-    {
-        //lineChartJs.Reload();
-    }
-
     public void UpdateChart()
     {
         //Update existing dataset
         var rand = new Random();
-        //lineChartConfig.Data.Labels.Add($"New{DateTime.Now.Second}");
+        lineChartConfig.Data.Labels.Add($"New{DateTime.Now.Second}");
 
         lineChartConfig.Data.Datasets.ForEach(dataset =>
         {
             var next = rand.Next(dataset.Data.Select(Convert.ToInt32).Max());
-            dataset.Data[3] = next;
+            dataset.Data.Add(next);
         });
-    }
-
-    protected override Task OnInitAsync()
-    {
-        Console.WriteLine("OnInitAsync");
-        return Task.CompletedTask;
-    }
-
-    protected override void OnParametersSet()
-    {
-        Console.WriteLine("OnParameterSet");
-    }
-
-    protected override Task OnParametersSetAsync()
-    {
-        Console.WriteLine("OnParameterSetAsync");
-        return Task.CompletedTask;
-    }
-
-    protected override bool ShouldRender()
-    {
-        Console.WriteLine("ShouldRender");
-        return true;
-    }
-
-    protected override Task OnAfterRenderAsync()
-    {
-        Console.WriteLine("OnAfterRenderAsync");
-        return Task.CompletedTask;
     }
 }
