--- a/samples/ServerSide/ChartJs.Blazor.Sample.Serverside/Pages/Index.cshtml
+++ b/samples/ServerSide/ChartJs.Blazor.Sample.Serverside/Pages/Index.cshtml
@@ -26,5 +26,6 @@
 
     <script src="_framework/components.server.js"></script>
     <script src="~/dist/ChartJsInterop.js" type="text/javascript" language="javascript"></script>
+    <script src="~/dist/SampleJsInterop.js" type="text/javascript" language="javascript"></script>
 </body>
 </html>
